# mandelbrot-rust

./: Cargo.toml
src/: main.rs
