[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Aaron Hill"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.20.0"
vulkano-win = "0.20.0"
vulkano-shaders = "0.20.0"
winit = "0.24.0"

#cgmath = "0.18"
#png = "0.16"
#time = "0.2"
#serde = { version = "1.0", features = ["derive"] }
#ron = "0.6"